package io.github.mortenjenne.fridgechef.logic;

public interface SceneController {
    void setAppManager(AppManager appManager);
}
