package io.github.mortenjenne.frigdechef;

public class Ingredient {
    private int id;
    private String name;
    private String image;


    public int getId() {
        return id; }
    public String getName() {
        return name; }
    public String getImage() {
        return image; }
}
